Changelog
=========

2.0a2 - 2010-11-23
------------------

* Fixed a problem with a faulty type assumption regarding
  DateTimeFields in the FormDateCriterion.  The FormDateCriterion
  doesn't actually used a DateTimeField.
  [rossp]

* Refactor the <form> and <button> based batch_macros so as to not
  conflict with other uses of the full "navigation" macro within an
  existing form resulting in nested <form>s.
  [rossp]

2.0a1 - 2010-11-21
------------------

* Ensure that the "default" profile is used by portal_quickinstaller
  by... well, default.  :-)
  [rossp]

* Use a <form> and <button> elements in the navigation/paging
  batch_macros to prevent "uri too long" errors when using paging with
  many form criteria.
  [rossp]

* Use method="post" for the criteria form to address "uri too long"
  when lots of form criteria are used.  Reported by mauro and
  confirmed to happen with just two date fields.
  [rossp]

* Added defines for Plone4 complatibility in folder_listing
  skin template.
  [seletz]

* Fix navigation_recurse template to match current Plone 4 version.
  [seletz] [ramonski]

* Add a collection listing portlet that makes use of the
  folder_listing macros for a richer portlet. [rossp]

* fix issue producing 
  AttributeError: 'NoneType' object has no attribute 'title_or_id'
  when adding path criterions.
  [hplocher]

* Fix '<input type="hidden" name="sort_on"...', now uses the default
  sort criteria if present

* Use individual persistent objects to represent table columns such as
  with the fodler_contents view.  UI for editing the folder_contents
  column objects has yet to be implemented.

* Fix <tfoot> usage [rossp]

* Integrate sort criteria with folder contents view columns for KSS
  sorting [rossp]

* Add pulldown/select, single-value criterion based on
  FormSelectionCriterion, FormPortalTypeCriterion, and
  FormReferenceCriterion [rossp]

1.1.1 - 2009-08-31
------------------
